--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,3 +46,6 @@ import(grid)
 import(methods)
 import(plyr)
 importFrom(reshape2,melt)
+importFrom(stats,lm)
+importFrom(stats,time)
+importFrom(utils,combn)
