lift to the scaffold

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Depends:
 Suggests:
     testthat,
     roxygen2,
-    knitr
+    knitr,
+    covr
 Collate:
     'MizerParams-class.r'
     'MizerSim-class.r'
